Corrigindo erro de debuf e Virtualização do Electron

--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header">
     <img src="../../assets/Logo2 (2).png" id="logoImg" class="logo" alt="Logo Ideia">
-    <h1 id="pageTitle" data-translate-key="pageTitle">Ferramenta de Programação de Missão Aeroespacial</h1>
+    <h1 id="pageTitle" data-translate-key="pageTitle">Ferramenta de Programação de Missão </h1>
     <div class="header-buttons">
       <div class="language-selector">
         <button id="languageToggle" class="language-button tooltip" data-tooltip-key="languageTooltip">
