--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -9,7 +9,7 @@
   <script src="../../../node_modules/blockly/javascript_compressed.js"></script>
   <script src="../../../node_modules/blockly/msg/en.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title data-translate-key="pageTitle">Ferramenta de Programação de Missão Aeroespacial</title>
+  <title data-translate-key="pageTitle">Ferramenta de Programação de Missão</title>
 </head>
 <body>
   <header class="header">
@@ -163,7 +163,7 @@
       <block type="library_dht"></block>
     </category>
     <category name="Sensores" colour="#0c0931" data-translate-name="CAT_SENSORS">
-      <category name="MPU6050" colour="#2e2e8a" data-translate-name="CAT_MPU6050">
+      <category name="MPU6050" colour="#FF8C00" data-translate-name="CAT_MPU6050">
         <block type="mpu6050_init"></block>
         <sep></sep>
         <block type="mpu6050_set_accel_range"></block>
