Padronização das cores

--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -192,7 +192,7 @@
         <block type="bmp180_pressure"></block>
         <block type="bmp180_altitude"></block>
       </category>
-      <category name="BH1750" colour="#ffcc00" data-translate-name="CAT_BH1750">
+      <category name="BH1750" colour="#fccf03" data-translate-name="CAT_BH1750">
         <block type="bh1750_init"></block>
         <block type="bh1750_begin"></block>
         <sep></sep>
@@ -200,7 +200,7 @@
         <sep></sep>
         <block type="bh1750_light_level"></block>
       </category>
-      <category name="HMC5883" colour="#8a2e8a" data-translate-name="CAT_HMC5883">
+      <category name="HMC5883" colour="#9932CC" data-translate-name="CAT_HMC5883">
         <!-- Inicialização e configuração -->
         <block type="hmc5883_sensor_object"></block>
         <block type="hmc5883_init"></block>
@@ -229,7 +229,7 @@
         <block type="hmc5883_sensor_info"></block>
         <block type="hmc5883_display_sensor"></block>
       </category>
-      <category name="DHT" colour="#2e8a2e" data-translate-name="CAT_DHT">
+      <category name="DHT" colour="#FF2800" data-translate-name="CAT_DHT">
         <block type="dht_init"></block>
         <block type="dht_begin"></block>
         <sep></sep>
